--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
 	implementation 'org.mapstruct:mapstruct:1.6.3'
-
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+	implementation 'org.postgresql:postgresql:42.7.3'
 }
 
 tasks.named('test') {
