--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.profiles.active=dev
 
 #server.port=8090
 server.servlet.context-path=/market-app/api
+
+#Setting SwaggerUI
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
